# waldl-gui

./: .gitignore  LICENSE  README.org  build.bat  build.sh  install.sh  main.py  pyproject.toml  wallhaven.desktop
