[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wallhaven-downloader"
version = "1.0.0"
description = "A GUI wallpaper search & downloader for wallhaven.cc"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0",
]

[project.scripts]
wallhaven = "main:main"

[project.gui-scripts]
wallhaven-gui = "main:main"

[tool.setuptools.packages.find]
where = ["."]
